<resources>
    <string name="app_name">Adkintun Mobile</string>
    <string name="app_sub_title">Medidor de tu internet móvil</string>
    <string name="view_status">Tu Estado</string>
    <string name="view_dashboard">Dashboard</string>
    <string name="view_connection_mode">Tipo de Conexión</string>
    <string name="view_network_type">Tipo de Señal</string>
    <string name="view_carrier_ranking">Ranking de Operadores</string>
    <string name="view_applications_traffic">Tráfico por Aplicación</string>
    <string name="view_active_connections">Conexiones Activas</string>
    <string name="view_active_measurements">Mediciones Activas</string>
    <string name="view_about_us">Acerca de</string>
    <string name="view_settings">Preferencias</string>
    <string name="view_notifications_log">Notificaciones</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="settings_updated">Preferencias actualizadas</string>
    <string name="settings_main_screen_key">settings_main</string>
    <string name="settings_app_data_category">Ajustes de la aplicación</string>
    <string name="settings_app_data_quota_total_key">plan_data_quota</string>
    <string name="settings_app_data_quota_total_title">Cuota de navegación de tu plan de datos</string>
    <string name="settings_app_day_of_recharge_key">day_of_recharge</string>
    <string name="settings_app_day_of_recharge_title">Día de recarga de tu plan de datos</string>
    <string name="settings_app_data_clean_ip_location_cache_key">clean_ip_location_cache</string>
    <string name="settings_app_data_clean_ip_location_cache_title">Borrar datos temporales</string>
    <string name="settings_app_data_clean_ip_location_cache_summary">Elimina los datos descargados para desplegar el mapa de conexiones activas.</string>
    <string name="settings_app_data_clean_ip_location_cache_message">Datos temporales borrados</string>
    <string name="settings_app_daily_notification_key">daily_notification</string>
    <string name="settings_app_daily_notification_title">Notificaciones Diarias</string>
    <string name="settings_app_daily_notification_summary">Programar una notificación diaria para el final del día con el resumen del consumo de datos móviles.</string>
    <string name="settings_adkintun_web_category">Adkintun Web</string>
    <string name="settings_adkintun_web_qr_scanner_title">Escanear Código QR</string>
    <string name="settings_adkintun_web_qr_scanner_key">adkintun_qr_scanner</string>
    <string name="settings_adkintun_web_qr_scanner_prompt">Ingresa a web.adkintunmobile.cl y escanea el código QR para acceder a tu información.</string>
    <string name="settings_adkintun_web_qr_scanner_success">Código QR escaneado</string>
    <string name="settings_adkintun_web_qr_scanner_failure">Error al escanear código</string>
    <string name="settings_sampling_category">Opciones de Debug</string>
    <string name="settings_sampling_category_key">sync_category_key</string>
    <string name="settings_sampling_hostname_key">sync_hostname</string>
    <string name="settings_sampling_hostname_title">Dirección del servidor</string>
    <string name="settings_sampling_hostname_summary">Especificar dirección de servidor de datos</string>
    <string name="settings_sampling_hostname_token_key">Authorization</string>
    <string name="settings_sampling_frequency_key">sync_frequency</string>
    <string name="settings_sampling_frequency_title">Frencuencia de envío</string>
    <string name="settings_sampling_startsync_key">start_sync</string>
    <string name="settings_sampling_startsync_title">Gatillar Sincronización</string>
    <string name="settings_sampling_delete_backup_key">delete_backup_reports</string>
    <string name="settings_sampling_delete_backup_title">Eliminar reportes almacenados</string>
    <string name="settings_sampling_lastsync_key">sync_lastsync</string>
    <string name="settings_sampling_lastsync_title">Última Sincronización</string>
    <string name="settings_sampling_compression_type_key">sync_compression_type</string>
    <string name="settings_sampling_compression_type_title">Tipo de compresión utilizada</string>
    <string name="settings_app_category">Aplicación</string>
    <string name="settings_app_version_key">app_version</string>
    <string name="settings_app_version_title">Versión de la aplicación</string>
    <string name="settings_app_version_default">2.1</string>
    <string name="settings_app_about_key">app_about</string>
    <string name="settings_app_about_title">Acerca de</string>
    <string name="settings_active_measurements_key">active_measurements_key</string>
    <string name="settings_start_active_measurements_key">start_active_measurements_key</string>
    <string name="settings_active_measurements_reports_title">Reportes</string>
    <string name="settings_active_measurements_reports_delete_toast">Reportes eliminados</string>
    <string name="settings_speed_test_category_title">Test de Velocidad</string>
    <string name="settings_speed_test_category_key">speed_test_key</string>
    <string name="settings_speed_test_params_category_title">Parámetros de Prueba</string>
    <string name="settings_speed_test_params_category_key">speed_test_params_key</string>
    <string name="settings_speed_test_download_size_key">download_size</string>
    <string name="settings_speed_test_download_size_title">Tamaño de archivo de bajada</string>
    <string name="settings_speed_test_upload_size_key">upload_size</string>
    <string name="settings_speed_test_upload_size_title">Tamaño de archivo de subida</string>
    <string name="settings_speed_test_server_host_key">speed_test_server_host</string>
    <string name="settings_speed_test_server_port_key">speed_test_server_port</string>
    <string name="settings_speed_test_server_name_key">speed_test_server_name</string>
    <string name="settings_speed_test_server_title">Servidor de prueba</string>
    <string name="settings_speed_test_reports_delete_key">delete_speedtest_reports</string>
    <string name="settings_speed_test_reports_delete_title">Eliminar Reportes Almacenados</string>
    <string name="settings_speed_test_reports_delete_summary">Eliminar todos los reportes de prueba de velocidad almacenados en el equipo.</string>
    <string name="settings_video_test_category_title">Test de Media</string>
    <string name="settings_video_test_category_key">media_test_key</string>
    <string name="settings_video_test_quality_category_title">Calidades de prueba</string>
    <string name="settings_video_test_quality_category_key">media_test_quality_key</string>
    <string name="settings_video_test_max_quality_key">media_test_max_quality</string>
    <string name="settings_video_test_quality_tiny_pixels">144p</string>
    <string name="settings_video_test_quality_tiny_name">tiny</string>
    <string name="settings_video_test_quality_tiny_key">media_test_quality_tiny</string>
    <string name="settings_video_test_quality_small_pixels">240p</string>
    <string name="settings_video_test_quality_small_name">small</string>
    <string name="settings_video_test_quality_small_key">media_test_quality_small</string>
    <string name="settings_video_test_quality_medium_pixels">360p</string>
    <string name="settings_video_test_quality_medium_name">medium</string>
    <string name="settings_video_test_quality_medium_key">media_test_quality_medium</string>
    <string name="settings_video_test_quality_large_pixels">480p</string>
    <string name="settings_video_test_quality_large_name">large</string>
    <string name="settings_video_test_quality_large_key">media_test_quality_large</string>
    <string name="settings_video_test_quality_hd720_pixels">720p</string>
    <string name="settings_video_test_quality_hd720_name">hd720</string>
    <string name="settings_video_test_quality_hd720_key">media_test_quality_hd720</string>
    <string name="settings_video_test_reports_delete_key">delete_videotest_reports</string>
    <string name="settings_video_test_reports_delete_title">Eliminar Reportes Almacenados</string>
    <string name="settings_video_test_none_quality_selected">Por favor selecciona alguna calidad de prueba</string>
    <string name="settings_video_test_finding_qualities">Obteniendo calidades de prueba, verifica tu conexión a internet</string>
    <string name="settings_video_test_reports_delete_summary">Eliminar todos los reportes de prueba de videos almacenados en el equipo.</string>
    <string name="settings_video_test_get_qualities_preference">Obtener Calidades Dispnibles</string>
    <string name="settings_connectivity_test_category_title">Test de Conectividad</string>
    <string name="settings_connectivity_test_category_key">connectivity_test_key</string>
    <string name="settings_connectivity_test_category_sites_title">Sitios a evaluar</string>
    <string name="settings_connectivity_test_category_sites_key">connectivity_test_sites_key</string>
    <string name="settings_connectivity_sites_count_key">sites_count_key</string>
    <string name="settings_connectivity_test_site_">site_</string>
    <string name="settings_connectivity_get_sites_key">get_recommended_sites</string>
    <string name="settings_connectivity_get_sites_title">Obtener sitios</string>
    <string name="settings_connectivity_get_sites_summary">Obtener sitios recomendados para realizar la prueba.</string>
    <string name="settings_connectivity_add_site_preference">Agregar</string>
    <string name="settings_connectivity_reports_delete_key">delete_connectivity_reports</string>
    <string name="settings_connectivity_reports_delete_title">Eliminar Reportes Almacenados</string>
    <string name="settings_connectivity_reports_delete_summary">Eliminar todos los reportes de prueba de conectividad almacenados en el equipo.</string>
    <string name="view_dashboard_toolbar_slogan">Tu Estado Ahora</string>
    <string name="view_dashboard_news">Novedades</string>
    <string name="view_dashboard_mobile_data_title">Consumo de datos móviles</string>
    <string name="view_dashboard_mobile_data_summary">Consumo aproximado de datos móviles del mes actual:</string>
    <string name="view_dashboard_conn_mode_title">Datos</string>
    <string name="view_dashboard_conn_mode_summary">Hoy has estado conectado principalmente a:</string>
    <string name="view_active_measurements_start_test">Iniciar Prueba</string>
    <string name="view_active_measurements_connectivitytest">Conectividad</string>
    <string name="view_active_measurements_connectivitytest_subtitle">Acceso a sitios web preferidos</string>
    <string name="view_active_measurements_connectivitytest_description">Esta prueba verifica una lista de sitios web configurable, determinando el tamaño y tiempo de carga de cada uno de los sitios. El resultado permite estudiar la disponibilidad para acceder a cada sitio.</string>
    <string name="view_active_measurements_connectivitytest_param_title">Lista de sitios web a evaluar</string>
    <string name="view_active_measurements_connectivitytest_example_url">www.ejemplo.com</string>
    <string name="view_active_measurements_history_timestamp">Fecha y hora</string>
    <string name="view_active_measurements_history_videoid">Video ID</string>
    <string name="view_active_measurements_history_quality">Resolución</string>
    <string name="view_active_measurements_history_size">Tamaño</string>
    <string name="view_active_measurements_history_percentage">Porcentaje Cargado</string>
    <string name="view_active_measurements_history_buffering">Tiempo de Carga</string>
    <string name="dialog_add_site_insert_site">Ingresa Nuevo Sitio</string>
    <string name="dialog_add_site_recommended_sites">Obtener Sitios Recomendados</string>
    <string name="dialog_add_site_recommended_sites_message">Esto eliminará los sitios ingresados</string>
</resources>