<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/settings_main_screen_key">

    <PreferenceCategory
        android:title="@string/settings_speed_test_category_title"
        android:key="@string/settings_speed_test_category_key"
        >
        <ListPreference
            android:key="@string/settings_speed_test_download_size_key"
            android:title="@string/settings_speed_test_download_size_title"
            android:dialogTitle="@string/settings_speed_test_download_size_title"
            android:defaultValue="5000000"
            android:summary="%s"
            android:entries="@array/speed_test_file_size"
            android:entryValues="@array/speed_test_file_size_values"
            />
        <ListPreference
            android:key="@string/settings_speed_test_upload_size_key"
            android:title="@string/settings_speed_test_upload_size_title"
            android:dialogTitle="@string/settings_speed_test_upload_size_title"
            android:defaultValue="5000000"
            android:summary="%s"
            android:entries="@array/speed_test_file_size"
            android:entryValues="@array/speed_test_file_size_values"
            />
        <Preference
            android:key="@string/settings_speed_test_server_name_key"
            android:title="@string/settings_speed_test_server_title"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_active_measurements_reports_title"
        >
        <Preference
            android:key="@string/settings_speed_test_reports_delete_key"
            android:title="@string/settings_speed_test_reports_delete_title"
            android:summary="@string/settings_speed_test_reports_delete_summary" />
    </PreferenceCategory>
</PreferenceScreen>