<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_sampling_category"
        >
        <CheckBoxPreference
            android:key="@string/settings_sampling_status_key"
            android:title="@string/settings_sampling_status_title"
            android:summary="@string/settings_sampling_status_summary"
            android:defaultValue="true"
            />
        <EditTextPreference
            android:key="@string/settings_sampling_hostname_key"
            android:title="@string/settings_sampling_hostname_title"
            android:summary="@string/settings_sampling_hostname_summary"
            android:defaultValue="@string/settings_sampling_hostname_default"
            android:dependency="@string/settings_sampling_status_key"
            />
        <ListPreference
            android:key="@string/settings_sampling_frequency_key"
            android:title="@string/settings_sampling_frequency_title"
            android:dialogTitle="@string/settings_sampling_frequency_title"
            android:defaultValue="1"
            android:entries="@array/sync_sampling_frequency"
            android:entryValues="@array/sync_sampling_frequency_values"
            android:dependency="@string/settings_sampling_status_key"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_app_category"
        >
        <Preference
            android:key="@string/settings_app_version_key"
            android:title="@string/settings_app_version_title"
            android:summary="@string/settings_app_version_default"
            android:defaultValue="@string/settings_app_version_default"
            />
    </PreferenceCategory>
</PreferenceScreen>