<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/settings_main_screen_key">

    <Preference
        android:key="@string/settings_connectivity_sites_count_key"
        android:defaultValue="0"
        />
    <PreferenceCategory
        android:title="@string/settings_connectivity_test_category_title"
        android:key="@string/settings_connectivity_test_category_key"
        >
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_connectivity_test_category_sites_title"
        android:key="@string/settings_connectivity_test_category_sites_key"
        >
    </PreferenceCategory>

    <!--<PreferenceCategory
        android:title="@string/settings_connectivity_get_sites_title">
        <Preference
            android:key="@string/settings_connectivity_get_sites_key"
            android:summary="@string/settings_connectivity_get_sites_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_active_measurements_reports_title">
        <Preference
            android:key="@string/settings_connectivity_reports_delete_key"
            android:title="@string/settings_connectivity_reports_delete_title"
            android:summary="@string/settings_connectivity_reports_delete_summary" />
    </PreferenceCategory>-->
</PreferenceScreen>