<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_add_site_insert_site"
        android:layout_gravity="left" />

    <EditText
        android:id="@+id/site_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/view_active_measurements_connectivitytest_example_url"
        android:inputType="textNoSuggestions"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_add_site_recommended_sites"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/abc_edit_text_inset_top_material" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_site_recommended_sites_message"
        android:id="@+id/check_box"
        android:layout_gravity="left" />
</LinearLayout>