<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="cl.niclabs.adkintunmobile.views.activemeasurements.viewfragments.ConnectivitytestFragment">

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/abc_edit_text_inset_top_material">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/view_active_measurements_connectivitytest"
                android:layout_marginTop="@dimen/abc_edit_text_inset_top_material"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/view_active_measurements_connectivitytest_subtitle"
                android:layout_marginTop="@dimen/abc_edit_text_inset_top_material"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/button_margin"
                android:background="@color/doughnut_no_info"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_active_measurements_connectivitytest_description"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/view_active_measurements_connectivitytest_param_title"
                android:layout_marginTop="@dimen/abc_edit_text_inset_top_material"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center">
                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Las Últimas Noticias"
                        android:layout_weight="0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="http://www.lun.com"
                        android:layout_weight="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                </TableRow>
                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Live"
                        android:layout_weight="0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="http://www.live.com"
                        android:layout_weight="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                </TableRow>
            </TableLayout>


            <Button
                android:text="@string/view_active_measurements_start_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:onClick="onWebPagesTestClick"/>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
